--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,26 +12,23 @@ body {
 .header {
 	display: flex;
 	justify-content: space-between;
-	align-items: center; /* scretch */
+	align-items: center;
 	background-color: #15191C;
 	padding: 8px 16px;
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.16);
 }
 
 .header__menu i::before {
-	/* background-color: pink; */
 	content: '\e904';
 	font-size: 24px;
 }
 
 .header__notification i::before {
-	/* background-color: navy; */
 	content: '\e906';
 	font-size: 24px;
 }
 
 .header__logo {
-	/* background-color: green;	*/
 	width: 40px;
 	
 }
@@ -222,4 +219,164 @@ body {
 .card__button--emphasis::before {
 	/* background-color: red;		/\* FIXME testing... *\/ */
 	margin-right: 8px;
+}
+
+/*
+.card--recent {
+    display: none;
+}
+*/
+
+.secao {
+    display: grid;
+    gap: 16px;
+}
+
+@media screen and (min-width: 1440px) {
+    body {
+        display: grid;
+        grid-template-columns: auto 1fr;
+    }
+
+    .header {
+        background-color: #1D232A;
+        display: grid;
+        column-gap: 32px;
+        grid-template-columns: 1fr auto;
+        padding: 16px 60px;
+        height: 80px;
+        box-sizing: border-box;
+        grid-column: 2;
+    }
+
+    .header__menu {
+        display: none;
+    }
+
+    .header__logo {
+        display: none;
+    }
+
+    .header__profile {
+        display: grid;
+        grid-template-columns: repeat(3, auto);
+        column-gap: 8px;
+        align-items: center;
+        justify-self: flex-end;
+        color: #95999C;
+        padding: 8px; 32px;
+        border-right: 1px solid #95999C;
+    }
+
+    .header__profile::before {
+        content: '';
+        display: block;
+        width: 32px;
+        height: 32px;
+        background-image: url(../img/profile_2.png);
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: center;
+    }
+
+    .header__profile::after {
+        content: '\e90d';
+        color: #FFFFFF;
+        font-size: 1.5rem;
+    }
+
+    .lateral-menu {
+        position: static; /* alternative: default */
+        width: 200px;
+        grid-column: 1;
+        grid-row: 1 / span 2;
+
+    }
+
+    .main {
+        display: grid;
+        grid-template-columns: auto 1fr auto;
+        grid-template-areas:
+            "page-tile page-title page-title"
+            "video-emphasis video-emphasis video-emphasis"
+            "video-section video-section video-section"
+            "recent-products recent-products recent-products"
+            "product-section product-section product-section"
+        column-gap: 32px;
+        padding: 16px 60px;
+        grid-column: 2;
+    }
+
+    .section-title {
+        grid-column: span 4;
+    }
+
+    .card--emphasis {
+        margin-botom: 0;
+    }
+
+    .card__image--mobile {
+        display: none;
+    }
+
+    .card__image--desktop {
+        display: block;
+    }
+
+    .card__button--emphasis {
+        grid-column: auto;
+        padding: 16px 8px;
+    }
+
+    .card--recent {
+        background-color: red; /* FIXME testing... */
+        display: grid;
+        grid-template-columns: auto auto;
+        align-items: center;
+        row-gap: 24px;
+        width: 256px;
+        padding: 16px;
+        box-sizing: border-box;
+    }
+
+    .card--recent .card__title {
+        grid-column: auto;
+    }
+
+    .card__link {
+        font-size: 0.8rem;
+        font-weight: 600;
+        color: #0480DC;
+        justify-self: flex-end;
+    }
+
+    .card__list {
+        display: grid;
+        row-gap: 16px;
+        grid-column: span 2;
+    }
+
+    .card__item {
+        display: grid;
+        grid-template-columns: auto 1fr;
+        gap: 8px;
+    }
+
+    .card__item-thumbnail {
+        width: 32px; 
+        grid-row: span 2;
+    }
+
+    .card__item-title {
+        font-size: 0.9rem;
+        line-height: 1.2rem;
+        font-weight: 700;
+    }
+
+    .card__item-profile {
+        font-size: 0.8rem;
+        color: #95999C;
+    }
+
+    /* TODO implement section classes */
 }
