--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -217,7 +217,6 @@ body {
 }
 
 .card__button--emphasis::before {
-	/* background-color: red;		/\* FIXME testing... *\/ */
 	margin-right: 8px;
 }
 
@@ -228,6 +227,11 @@ body {
 .section {
     display: grid;
     gap: 16px;
+}
+
+.section-title {
+    font-size: 1.2rem;
+    font-weight: 700;
 }
 
 @media screen and (min-width: 1440px) {
@@ -298,7 +302,7 @@ body {
             "page-title page-title page-title"
             "video-emphasis video-emphasis video-recent"
             "video-section video-section video-section"
-            "recent-products recent-products recent-products"
+            "recent-products product-emphasis product-emphasis"
             "product-section product-section product-section";
         column-gap: 32px;
         padding: 16px 60px;
@@ -323,7 +327,6 @@ body {
     }
 
     .card--recent {
-        background-color: red; /* FIXME testing... */
         display: grid;
         grid-template-columns: auto auto;
         align-items: center;
@@ -402,6 +405,6 @@ body {
     }
 
     .product-section {
-        grid-area: product-area;
+        grid-area: product-section;
     }
 }
